feat: add CORS, Bucket4j rate limiting, global error handling, and a cart
Middleware
  * CORS via a CorsConfigurationSource wired into all three filter chains,
    driven by app.cors.*. Origins are an explicit allow-list: a wildcard is
    illegal alongside credentials and fails in the browser, not at startup.
  * Rate limiting with Bucket4j and a Caffeine-backed bucket store, registered
    ahead of Spring Security so throttled traffic costs no authentication work
    and the login endpoints are themselves protected. Tiers are per-path and
    property-driven: 10/min for chat, 2/hour for reindex, 30/min for search,
    5/min for credential endpoints, 100/min otherwise. X-Forwarded-For is
    honoured only when explicitly trusted, since an untrusted header lets a
    caller mint a fresh identity per request.
  * @RestControllerAdvice for the API and @ControllerAdvice for the JSP
    controllers. The catch-all logs with a correlation id and returns only that
    id rather than internal detail. The rate limiter and the security entry
    points write their own responses through a shared ApiErrorWriter, because
    exceptions thrown in a servlet filter never reach a ControllerAdvice.

Cart
  * cart_product could not represent a cart: it held only (cart_id, product_id)
    with no quantity, and nothing stopped a customer having several carts. V7
    adds quantity and a unique constraint per customer.
  * CartService, CartApiController and a server-rendered CartController with a
    real cart.jsp, replacing the deleted JDBC view. Checkout converts the cart
    into an order and empties it. Every operation acts on the caller's own cart.

Configuration and infrastructure
  * open-in-view disabled and enable_lazy_load_no_trans removed; both hid N+1
    queries behind the view layer. Read paths fetch via @EntityGraph.
  * baseline-on-migrate disabled: against a non-empty database it silently
    skipped V1 and then failed schema validation.
  * SQL logging moved to a dev pro